[gd_scene load_steps=3 format=3 uid="uid://d14sjf2tn8tpi"]

[ext_resource type="Texture2D" uid="uid://0d08vljed4sa" path="res://icon.svg" id="1_knt8b"]
[ext_resource type="Script" uid="uid://dhilvqkx783dc" path="res://robot_builder/robot_builder.gd" id="1_qaxc5"]

[node name="RobotBuilder" type="PanelContainer"]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_qaxc5")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "ROBOT"

[node name="TextureRect" type="TextureRect" parent="HSplitContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_knt8b")

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "COMPONENTS"

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="FinishRobot" type="Button" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "DONE"

[node name="PanelContainer2" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "AVAILABLE COMPONENTS"

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HSplitContainer/PanelContainer/VBoxContainer/FinishRobot" to="." method="_on_finish_robot_pressed"]
